# Student-Attendance-Control-System

./: CMakeLists.txt  GITHUB_UPLOAD_REHBERI.md  README.md  adminwidget.cpp  adminwidget.h  adminwidget.ui  create_sqlite_db.cpp  databasemanager.cpp  databasemanager.h  loginwidget.cpp  loginwidget.h  loginwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  package.json  studentwidget.cpp  studentwidget.h  studentwidget.ui  styles.qss  tablehelper.cpp  tablehelper.h  teacherwidget.cpp  teacherwidget.h  teacherwidget.ui
.cache/clangd/index/: adminwidget.h.C73A22C5E3F5BB33.idx  databasemanager.h.4B195A2DE65B246E.idx  loginwidget.h.61BB179A0B472D6A.idx  mainwindow.h.BB4041AFFF2A32AB.idx  studentwidget.h.11A29F3D703FF0E7.idx  teacherwidget.h.6826DFB36931FB62.idx
